# data-engineer

./: .gitignore  AI_LOG.md  README.md  REFLECTION.md  TOOLS.md  pyproject.toml  requirements.txt  run_all.py
bonus/: q6_1_ai_collaboration.md  q6_2_business_insights.md
data/: README.md
q1_data_quality/: README.md  cleaning_strategy.md  data_quality_report.md  findings.md  q1_code.ipynb  q1_code.py
q2_sql_analysis/: README.md  erdiagram.md  load_olist.py  q2_1_translation_gap.sql  q2_2_monthly_metrics.sql  q2_3_top_sellers.sql  q2_4_query_optimization.md
q3_etl_pipeline/: README.md  pipeline.py  validation_report.md
q4_llm_extraction/: README.md  accuracy_evaluation.md  cost_report.md  extract_reviews.py  extracted_issues_live_sample.json  pipeline_design.md  prompt_template.txt  test.py  test_extract_reviews.py
q5_system_design/: real_time_pipeline_design.md
