[project]
name = "data-engineer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=42.0.0",
    "kagglehub>=1.0.2",
    "kagglesdk==0.1.28; python_version < '3.11'",
    "kagglesdk==0.1.30; python_version >= '3.11'",
    "numpy>=1.24.0,<3.0.0",
    "openai>=1.0.0,<3.0.0",
    "pandas>=2.0.0,<3.0.0",
    "pyarrow>=14.0.0,<25.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pymysql>=1.1.0,<2.0.0",
    "pytest>=7.0.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
]
